Reestructura completa de artículos .md. Mantenible y escalable.

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@ Thumbs.db
 *.swp
 
 # === CARPETAS DE OUTPUT ===
-/output/
+!/output/                     # <– ⚠️ incluir carpeta output en el repositorio
+/output/*.tmp
+/output/*.bak
 /dist/
 /build/
 
